test/corpus/statements
========================================================================
Test an empty statement
========================================================================

.class public interface abstract LA/BC;
.super Ljava/lang/Object;
.source ""

.method public empty()V
	return-void
.end method

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier)
      (access_modifier)
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (source_directive
    (string))
  (method_definition
    (access_modifier)
    (method_signature
      (method_identifier)
      (primitive_type))
    (expression
      (opcode))))

========================================================================
Test statements with variable and number literal arguments
========================================================================

.class public interface abstract LA/BC;
.super Ljava/lang/Object;
.source ""

.method public static main([Ljava/lang/String;)I
	const v0, 0x0
	return v0
.end method

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier)
      (access_modifier)
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (source_directive
    (string))
  (method_definition
    (access_modifier)
    (access_modifier)
    (method_signature
      (method_identifier)
      (parameters
        (array_type
          (class_identifier
            (identifier)
            (identifier)
            (identifier))))
      (primitive_type))
    (expression
      (opcode)
      (variable)
      (number))
    (expression
      (opcode)
      (variable))))

========================================================================
Test odex return-void opcodes
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;

.method public barrier()V
	return-void-barrier
.end method

.method public noBarrier()V
	return-void-no-barrier
.end method

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (method_definition
    (access_modifier)
    (method_signature
      (method_identifier)
      (primitive_type))
    (expression
      (opcode)))
  (method_definition
    (access_modifier)
    (method_signature
      (method_identifier)
      (primitive_type))
    (expression
      (opcode))))
